@@ -1,3 +1,4 @@
+* [#18] Flush task state files on interrupt
 v1.1.17 20170526
 * Make workflow task specification notice less verbose
 * Fix cancelTaskTree to work correctly within subworkflows
